# Jeejee

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: architecture.md  dsp-design.md  framework-decision.md  ui-design.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: CLAUDE.md  OptoCompressor.cpp  OptoCompressor.h
src/ui/: CLAUDE.md  LA2ALookAndFeel.cpp  LA2ALookAndFeel.h  VUMeter.cpp  VUMeter.h
